--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "todo-mindbox-v2",
+    "homepage": "https://pv18.github.io/todo-mindbox-v2",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
@@ -22,7 +23,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "prettier": "npx prettier --write **/*.{ts,tsx,json}"
+        "prettier": "npx prettier --write **/*.{ts,tsx,json}",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -43,6 +46,7 @@
         ]
     },
     "devDependencies": {
+        "gh-pages": "^6.1.1",
         "prettier": "3.3.2",
         "sass": "^1.77.5"
     }
